--- a/ProyectoFinal/BackEnd/src/main/resources/application.properties
+++ b/ProyectoFinal/BackEnd/src/main/resources/application.properties
@@ -4,3 +4,7 @@ Spring.datasource.url=jdbc:mysql://localhost:3306/backendrnm?useSSL=false&server
 Spring.datasource.username=root
 Spring.datasource.password=
 Spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#JWT
+jwt.secret= secret
+jwt.expiration= 2800
+
