--- a/ProyectoFinal/BackEnd/src/main/resources/application.properties
+++ b/ProyectoFinal/BackEnd/src/main/resources/application.properties
@@ -1,9 +1,14 @@
+#Ambiente local
+#Spring.datasource.url=jdbc:mysql://localhost:3306/backendrnm?useSSL=false&serverTimezone=UTC
+#Spring.datasource.username= uhu7sgxadjw4ombo
+#Spring.datasource.password= URlXwpzzUaIEHhufoJxk
+
 Spring.jpa.hibernate.ddl-auto =update
-Spring.jpa.hibernate.ddl-auto=update
-Spring.datasource.url=jdbc:mysql://localhost:3306/backendrnm?useSSL=false&serverTimezone=UTC
-Spring.datasource.username=root
-Spring.datasource.password=
 Spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+Spring.datasource.url=mysql://uhu7sgxadjw4ombo:URlXwpzzUaIEHhufoJxk@bd8ixbu7tbfdt88wycnx-mysql.services.clever-cloud.com:3306/bd8ixbu7tbfdt88wycnx
+Spring.datasource.username= uhu7sgxadjw4ombo
+Spring.datasource.password= URlXwpzzUaIEHhufoJxk
+
 #JWT
 jwt.secret= secret
 jwt.expiration= 2800
